# gaze-robot-assistant

./: .gitignore  calibration.yaml  config.example.toml  config.toml  generate_aruco.py  read_aruco.py  readme.md
ros/: client.py  move.py
ros_ws/src/ros_package/: CMakeLists.txt  package.xml
ros_ws/src/ros_package/launch/: demo_robot.launch
ros_ws/src/ros_package/models/big_table/: model.sdf
ros_ws/src/ros_package/models/box/: model.config  model.sdf
ros_ws/src/ros_package/models/box/meshes/: box.dae  box.stl
src/: aruco_marker_generation.py  cobot_boxes.py  common.py  despawn_respawn.py  detection_and_pose_estimation.py  glasses_provider.py  img_provider.py  ros_robot_controller.py  server.py  server_ros.sh  socket_com.py  socketcom.py  spawner.py
